# alx-backend-python

./: .gitignore  README.md
0x00-python_variable_annotations/: 0-add.py  1-concat.py  100-safe_first_element.py  101-safely_get_value.py  102-type_checking.py  2-floor.py  3-to_str.py  4-define_variables.py  5-sum_list.py  6-sum_mixed_list.py  7-to_kv.py  8-make_multiplier.py  9-element_length.py
0x01-python_async_function/: 0-basic_async_syntax.py  1-concurrent_coroutines.py  1-main.py  2-measure_runtime.py  3-main.py  3-tasks.py  4-main.py  4-tasks.py  README.md
0x02-python_async_comprehension/: 0-async_generator.py  1-async_comprehension.py  2-main.py  2-measure_runtime.py
0x03-Unittests_and_integration_tests/: README.md  client.py  test_client.py  test_utils.py
Django-Middleware-0x03/: pyproject.toml  settings.py
Django-Middleware-0x03/chats/: middleware.py  models.py  serializers.py  views.py
Django-Middleware-0x03/messaging_app/: .settings.py.swp  settings.py  urls.py
Django-signals_orm-0x04/: main.py  post_man-Collections
messaging/: pyproject.toml
messaging_app/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  wait-for-it.sh
python-context-async-perations-0x02/: 0-databaseconnection.py  1-execute.py  3-concurrent.py
python-decorators-0x01/: 0-log_queries.py  1-with_db_connection.py  2-transactional.py  3-retry_on_failure.py  4-cache_query.py  README.md
python-generators-0x00/: 0-stream_users.py  1-batch_processing.py  2-lazy_paginate.py  3-main.py  4-stream_ages.py  README.md  seed.py
(+32 files in other folders)
