[project]
name = "django-middleware-0x03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-nested-routers>=0.94.2",
    "environ>=1.0",
]
